# Cpp-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Debug32.exe.lnk  Debug64.exe.lnk  Engine.cmake  Engine.sln  Release32.exe.lnk  Release64.exe.lnk  fullBuild.bat  makefile  openGlSetup.txt
Engine/: AudioManager.cpp  BatchedRenderers.cpp  CMakeLists.txt  CMakeSettings.json  Engine.cpp  Engine.vcxproj  Engine.vcxproj.filters  EngineLib.cpp  Renderers.cpp  UI.cpp  cmakeCompile.bat  cmakeCompileWin32.bat  cmakeCompilex64.bat
Engine/Data/: map.json
Engine/Headers/: AudioManager.h  BatchedRenderers.h  Cameras.h  Engine.h  EngineLib.h  GameLib.h  Json.h  Lib.h  Main.h  Renderers.h  UI.h
Engine/Shaders/: basic.vert  batch.vert  batchVs.glsl  color.frag  colorFrag.glsl  dotColor.frag  dotTex.frag  dotTexBatch.frag  fs.glsl  mixTexFrag.glsl  modulateTexFrag.glsl  spritesheet.vert  tex.frag  texBatch.frag  texFrag.glsl  text.frag  textBatch.frag  textFrag.glsl  textVs.glsl  twoTexFrag.glsl  vs.glsl
Engine/Src/: BatchedRenderers.cpp  Cameras.cpp  Engine.cpp  EngineLib.cpp  GameLib.cpp  Json.cpp  Lib.cpp  Main.cpp  Renderers.cpp  UI.cpp
Engine/dependencies/include/glad/: glad.h
Engine/imports/dependencies/: glad.c
Engine/imports/dependencies/glad/: CMakeLists.txt
Engine/imports/dependencies32/: freetype.lib
Engine/imports/dependencies64/: freetype.lib
